; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/compress/extr_zstd_compress.c_ZSTD_equivalentParams.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/compress/extr_zstd_compress.c_ZSTD_equivalentParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [41 x i8] c"ZSTD_equivalentParams: pledgedSrcSize=%u\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"ZSTD_equivalentCParams() == 0\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"ZSTD_equivalentLdmParams() == 0\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"ZSTD_sufficientBuff() == 0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64, i64, i64, i32, i64)* @ZSTD_equivalentParams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ZSTD_equivalentParams(i64 %0, i64 %1, i64 %2, i64 %3, i64 %4, i32 %5, i64 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__, align 4
  %10 = alloca %struct.TYPE_4__, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = bitcast %struct.TYPE_4__* %9 to i64*
  store i64 %0, i64* %16, align 4
  %17 = bitcast %struct.TYPE_4__* %10 to i64*
  store i64 %1, i64* %17, align 4
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i64 %4, i64* %13, align 8
  store i32 %5, i32* %14, align 4
  store i64 %6, i64* %15, align 8
  %18 = load i64, i64* %15, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32 (i32, i8*, ...) @DEBUGLOG(i32 4, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ZSTD_equivalentCParams(i32 %22, i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %7
  %28 = call i32 (i32, i8*, ...) @DEBUGLOG(i32 4, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %8, align 4
  br label %51

29:                                               ; preds = %7
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @ZSTD_equivalentLdmParams(i32 %31, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %38, label %36

36:                                               ; preds = %29
  %37 = call i32 (i32, i8*, ...) @DEBUGLOG(i32 4, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %8, align 4
  br label %51

38:                                               ; preds = %29
  %39 = load i64, i64* %11, align 8
  %40 = load i64, i64* %12, align 8
  %41 = load i64, i64* %13, align 8
  %42 = load i32, i32* %14, align 4
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = load i64, i64* %15, align 8
  %46 = call i32 @ZSTD_sufficientBuff(i64 %39, i64 %40, i64 %41, i32 %42, i32 %44, i64 %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %50, label %48

48:                                               ; preds = %38
  %49 = call i32 (i32, i8*, ...) @DEBUGLOG(i32 4, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %8, align 4
  br label %51

50:                                               ; preds = %38
  store i32 1, i32* %8, align 4
  br label %51

51:                                               ; preds = %50, %48, %36, %27
  %52 = load i32, i32* %8, align 4
  ret i32 %52
}

declare dso_local i32 @DEBUGLOG(i32, i8*, ...) #1

declare dso_local i32 @ZSTD_equivalentCParams(i32, i32) #1

declare dso_local i32 @ZSTD_equivalentLdmParams(i32, i32) #1

declare dso_local i32 @ZSTD_sufficientBuff(i64, i64, i64, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
